add popup order
add popup order to places.html, index.html

--- a/css/about.html
+++ b/css/about.html
@@ -92,7 +92,7 @@
                                 Регистрируйтесь на сайте, расскажите немного о
                                 себе, включая ваши увлечения и интересы
                             </p>
-                            <a class="steps-links" href="#">
+                            <a class="steps-links" href="#popup-register">
                                 <p class="stepinfolast">Зарегистрироваться</p>
                             </a>
                         </div>
